feat: add patient and ambulance fields validation
