# internal/reservation/model_ambulance.go
@@ -1,9 +1,10 @@
 /*
- * Reservation API
+ * Reservation Api
  *
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * API version: 1.0.0
+ * Contact: xbublavy@stuba.sk
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
@@ -11,13 +12,13 @@ package reservation
 
 type Ambulance struct {
 
-	Id string `json:"id,omitempty"`
+	Id string `json:"id"`
 
-	Name string `json:"name,omitempty"`
+	Name string `json:"name"`
 
-	Address string `json:"address,omitempty"`
+	Address string `json:"address"`
 
-	OfficeHours OfficeHours `json:"officeHours,omitempty"`
+	OfficeHours OfficeHours `json:"officeHours"`
 
-	MedicalExaminations []MedicalExaminations `json:"medicalExaminations,omitempty"`
+	MedicalExaminations []MedicalExaminations `json:"medicalExaminations"`
 }
