# internal/reservation/model_get_ambulance_reservations_by_id_200_response.go
@@ -1,9 +1,10 @@
 /*
- * Reservation API
+ * Reservation Api
  *
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * API version: 1.0.0
+ * Contact: xbublavy@stuba.sk
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
