# internal/reservation/model_reservation.go
@@ -1,9 +1,10 @@
 /*
- * Reservation API
+ * Reservation Api
  *
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * API version: 1.0.0
+ * Contact: xbublavy@stuba.sk
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
@@ -15,9 +16,9 @@ import (
 
 type Reservation struct {
 
-	Patient Patient `json:"patient,omitempty"`
+	Patient Patient `json:"patient"`
 
-	TimeSlot time.Time `json:"timeSlot,omitempty"`
+	TimeSlot time.Time `json:"timeSlot"`
 
 	// Optional message for the reservation
 	Message string `json:"message,omitempty"`
